# SX-Whisper

./: .gitignore  GLASS_EFFECTS_COMPLETED.md  GLASS_FIX_INSTRUCTIONS.md  LIQUID_GLASS_IMPLEMENTATION.md  POWER.md  README.md  SETUP_IOS_WINDOWS.md  capture-overlay.html  index.html  package-lock.json  package.json  screenshot-preview.html  vite.config.ts
public/: overlay.html
scripts/: generate-icons.mjs
src/: App.tsx  capture-overlay.ts  main.tsx  screenshot-preview.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs  paster.rs  screenshot.rs  transcription.rs
src/components/: AboutPanel.tsx  HistoryPanel.tsx  HomePanel.tsx  HotkeyInput.tsx  IntroScreen.tsx  SettingsPanel.tsx  ThemesPanel.tsx
src/hooks/: useConfig.ts  useHistory.ts  useRecording.ts  useStats.ts
src/styles/: capture-overlay.css  glass-effects.css  screenshot-preview.css
